src/objects/Insight_Chapter__c.object
<CustomObject><fields>
        <fullName>Insight__c</fullName>
        <label>Insight</label>
        <referenceTo>Insight__c</referenceTo>
        <relationshipLabel>Insight Chapters</relationshipLabel>
        <relationshipName>Insight_Chapters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Logical sections of an Insight.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Insight Chapter</label><nameField>
        <displayFormat>IC {0}</displayFormat>
        <label>Insight Chapter Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Insight Chapters</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith></CustomObject>